v?.? ??????????
  Doc bugs (Pedro Figueiredo)

v0.9 Tue 25 Mar 2008 17:29:02 GMT
  Fix some documentation errors
  Fixed an error when POSTing

v0.8 Tue 25 Mar 2008 00:49:04 GMT
  CPANify (docs, tests, Build.PL etc etc)
  Refactor and simplify code
  Add example fireeagle script
  Add lookup_location method
  Allow ability to use complicated locations
  Use a Mersenne Twister for the nonce where possible

v0.06 Wed 05 Mar 2008 12:00:00 PST
  Initial release from Yahoo! Brickhouse